force-app/main/default/objects/Potentiale__c/Potentiale__c.object-meta.xml
<CustomObject>
    <description>This object records a surgeons use of both Zimmer Biomet and competitor products.</description>
    <label>Products Of Choice</label>
    <nameField>
        <displayFormat>P-{YYYY}{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Of Choice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>