force-app/main/default/objects/Potentiale__c/fields/ECLASS_Code__c.field-meta.xml
<CustomField>
    <fullName>ECLASS_Code__c</fullName>
    <formula>Product__r.ECLASS_Code__c</formula>
    <label>ECLASS Code</label>
    <type>Text</type>
</CustomField>