force-app/main/default/objects/Potentiale__c/fields/OPS_Code__c.field-meta.xml
<CustomField>
    <fullName>OPS_Code__c</fullName>
    <formula>Product__r.OPS_Code__c</formula>
    <label>OPS Code</label>
    <type>Text</type>
</CustomField>