force-app/main/default/objects/Potentiale__c/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <label>Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Robotics Ja</fullName>
            </value>
            <value>
                <fullName>Robotics Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>