force-app/main/default/objects/Potentiale__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Potential_Product__c</referenceTo>
    <relationshipLabel>Products Of Choice (Product)</relationshipLabel>
    <relationshipName>Potentiale</relationshipName>
    <type>Lookup</type>
</CustomField>