force-app/main/default/objects/Potentiale__c/fields/Purchasing_period__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_period__c</fullName>
    <description>Purchasing period</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of expiring contracts or next possible invest date for this Product</inlineHelpText>
    <label>Purchasing period</label>
    <type>Date</type>
</CustomField>