force-app/main/default/objects/Potentiale__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products Of Choice (Surgeon)</relationshipLabel>
    <relationshipName>Potentiale</relationshipName>
    <type>Lookup</type>
</CustomField>