force-app/main/default/objects/Potentiale__c/fields/ZB_Product__c.field-meta.xml
<CustomField>
    <fullName>ZB_Product__c</fullName>
    <formula>ISPICKVAL(Product__r.Provider__c, &apos;Zimmer Biomet&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZB Product</label>
    <type>Checkbox</type>
</CustomField>