force-app/main/default/objects/Potentiale__c/recordTypes/Default_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Default_Record_Type</fullName>
    <active>true</active>
    <label>Default Record Type</label>
</RecordType>